<resources>
    <!-- main -->
    <string name="app_name">Hleper</string>
    <!-- the words used for attributing icons to its author -->
    <string name="flaticon_attribute">Icon made by freepik(https://www.freepik.com/) from www.flaticon.com </string>

    <!-- main welcome -->
    <string name="main_welcome">Welcome to Hleper!</string>
    <!-- sign in or sign up -->
    <string name="signInOrUp">登陆/注册</string>
    <!-- email phrase -->
    <string name="email_input">Enter your email</string>
    <!-- password phrase -->
    <string name="password_input">Enter your password</string>
    <!-- log in string -->
    <string name="log_in_str">登陆</string>
    <!-- sing up hint in log in xml -->
    <string name="sign_up_hint">没有账号？立即注册</string>
    <string name="su_email">浙大邮箱</string>
    <string name="su_passwd">密码</string>
    <string name="su_verify">确认密码</string>
    <string name="su_vcode">验证码</string>
    <string name="vcode_input" />
    <string name="verify_input">Enter your password again</string>
    <string name="send_vcode">发送验证码</string>
    <string name="sign_up_str">注册</string>


    <!-- Order Editor Strings -->
    <string name="order_title">标题</string>
    <string name="order_title_hint">title</string>
    <string name="order_campus">校区</string>
    <string name="order_detail">详细信息</string>
    <string name="order_detail_hint">detail</string>
    <string name="order_reward">赏金</string>
    <string name="order_reward_hint">reward</string>
    <string name="order_people_number">人数限制</string>
    <string name="order_people_number_hint">如需要拼单一点点则输入：1</string>
    <string name="order_type">类型</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campus_zjg">紫金港</string>
    <string name="campus_yq">玉泉</string>
    <string name="campus_xx">西溪</string>
    <string name="campus_zj">之江</string>
    <string name="campus_unknown">Unknown</string>
    <string name="type_unknown">Unknown</string>
    <string name="type_taxi">拼车</string>
    <string name="type_cheer">拼单</string>
    <string name="type_takeaway">取外卖</string>
    <string name="type_help">其他帮助</string>
    <string name="action_refresh">refresh</string>
    <string name="menu_save">Save</string>
    <string name="menu_default">default</string>
    <string name="manage_player">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="help">nothing help</string>
    <string name="donate">don\'t donate now</string>
    <string name="order_description">简要描述</string>
    <string name="order_description_hint" />

</resources>
