<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:id="@+id/top_img_container">
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:src="@drawable/fastfood"
            android:id="@+id/top_img"
            />
    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:id="@+id/up_container_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/su_email"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceMedium"
                android:src="@drawable/email" />
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_marginRight="32dp"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/up_edit_email"
                android:hint="@string/email_input"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/up_container_passwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:text="@string/su_passwd"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_marginRight="32dp"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/up_edit_passwd"
                android:hint="@string/password_input"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/up_container_verify"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:text="@string/su_verify"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_marginRight="32dp"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:id="@+id/up_edit_verify"
                android:hint="@string/verify_input"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/up_container_vcode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:text="@string/su_vcode"
                android:textColor="@color/colorPrimary"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/up_edit_vcode"
                android:hint="@string/vcode_input"/>
        </RelativeLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_vcode"
            android:textColor="@color/techPrimary"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="36dp"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_button"
            android:layout_centerInParent="true"
            android:text="@string/sign_up_str"
            android:background="@drawable/my_btn_bg"
            />
    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@android:color/transparent"/>

</LinearLayout>