<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:id="@+id/top_img_container">
        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="20dp"
            android:src="@drawable/fastfood"
            android:id="@+id/top_img"
            />
    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@android:color/transparent"/>
    <LinearLayout
        android:id="@+id/in_container_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/email" />
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginRight="32dp"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/in_edit_email"
                android:hint="@string/email_input"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/in_container_passwd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/password" />
        </RelativeLayout>

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginRight="32dp"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/in_edit_passwd"
                android:hint="@string/password_input"/>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_button"
            android:layout_centerInParent="true"
            android:text="@string/log_in_str"
            android:background="@drawable/my_btn_bg"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:id="@+id/to_sign_up"
        android:textColor="@color/techPrimary"
        android:text="@string/sign_up_hint"
        android:layout_gravity="center_horizontal"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/transparent"/>

</LinearLayout>